--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap');
 
+/*---------------------------------- LOGIN PAGE  ----------------------------------*/
+
 * {
     padding: 0;
     margin: 0;
@@ -49,3 +51,12 @@ img {
     color: rgb(0, 19, 19);
 }
 
+
+
+/* ----------------------- ADD A BADGE PAGE ---------------------------------*/
+
+h1.addbadgeh1 {
+color: white;
+padding-left: 40%;
+padding-top: 10%;
+}
