--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -1,115 +1,129 @@
 /* wassim */
-h1{
+h1 {
+
+  color: white !important;
+}
+
+button {
+  margin-bottom: 5vh !important;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: white !important;
+  background-color: grey !important;
   
-    color:white !important;
-}
-
-button{
-    margin-bottom: 5vh !important;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    color: white !important;
-    background-color: grey !important;
 
 }
 
-.square{ /*border multicolor*/
-    height: 500px;
-    width: 500px;
-    border: 5px solid blue;
-    
-    border-image: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(19,6,0,1) 35%, rgba(222,219,219,1) 100%);
-    border-image-slice:1;
+.cadre {
+  /*border multicolor*/
+  height: 500px;
+  width: 500px;
+  border: 5px solid blue;
+
+  border-image: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(19, 6, 0, 1) 35%, rgba(222, 219, 219, 1) 100%);
+  border-image-slice: 1;
 }
 
-nav{
-    padding: 20px 0 20px 0;
-    margin-bottom: 4%;
-    background-color:rgb(0, 19, 19);
-    clip-path: polygon(50% 0%, 100% 0, 100% 60%, 100% 64%, 0 82%, 0 60%, 0 0);
-}
-
-.info, .badge{
-    padding-top: 10vh;
-   
-    background: #383838;
-    box-shadow:  5px 5px 0px #161616;
+nav {
+  padding: 20px 0 20px 0;
+  margin-bottom: 4%;
+  background-color: rgb(0, 19, 19);
+  clip-path: polygon(0 0, 100% 1%, 100% 58%, 100% 68%, 0 100%, 0 57%);
 
 }
 
-img{
-border-radius: 8%;
+.info,
+.badge {
+  padding-top: 10vh;
+
+  background: #383838;
+  box-shadow: 5px 5px 0px #161616;
+
 }
 
-.barre_vertical{
-    height: 60vh;
-    margin: 30px 142px 30px 0;
-    border-right: 2px solid black;
-    
-}
-.titre_h1{
- margin-top: 4vh;
+img {
+  border-radius: 8%;
 }
 
-.titre_h2{
-  
-    padding: 20px 0 20px 0;
-    margin-bottom: 4%;
-    background-color:red;
-   
-    background: #383838;
-    box-shadow:  5px 5px 0px #161616;
+.barre_vertical {
+  height: 60vh;
+  margin: 30px 142px 30px 0;
+  border-right: 2px solid black;
 
-    -webkit-animation: titre_h2 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: titre_h2 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-                 
 }
-@-webkit-keyframes titre_h2 {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      opacity: 1;
-    }
+
+.titre_h1 {
+  margin-top: 4vh;
+}
+
+.titre_h2 {
+
+  padding: 20px 0 20px 0;
+  margin-bottom: 4%;
+  background-color: red;
+
+  background: #383838;
+  box-shadow: 5px 5px 0px #161616;
+
+
+}
+
+.footer {
+ 
+  bottom: 0;
+  padding-bottom: 50px;
+  width: 100%;
+
+}
+
+.footer_p {}
+
+
+/*---------------------------------------( Animation )----------------------------------------------------*/
+.animationSpawn {
+  -webkit-animation: animationSpawn 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: animationSpawn 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+@-webkit-keyframes animationSpawn {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
   }
-  @keyframes titre_h2 {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      opacity: 1;
-    }
+
+  40% {
+    opacity: 0.6;
   }
-  
 
-.footer{
-    background-color:#ccc;
-    bottom:0; 
-    padding-bottom: 50px;
-    width:100%;
-   
+  100% {
+    opacity: 1;
+  }
 }
 
-.footer_p{
+@keyframes animationSpawn {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
 
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
+
+
+/*---------------------------------------( Responsive  )----------------------------------------------------*/
 
 @media only screen and (max-width: 1000px) {
-  body {
-    background-color: yellow !important;
-  }
+  body {}
 }
 
 /* wassim */
