--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -64,8 +64,8 @@ font-family: 'Montserrat', sans-serif;
 }
 
 .addabadge {
-    width: 75%;
-    padding-left: 25%;
+    width: 80%;
+    padding-left: 20%;
 }
 
 
@@ -80,3 +80,29 @@ h3.addbadgeh3 {
     color: white;
 }
 
+.rectangle {
+    height: 50px;
+    width: 100px;
+    background-color: rgb(255, 255, 255);
+  }
+
+  .square {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(255, 255, 255);
+  }
+
+  .circle {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+  }
+
+  .triangle-up {
+	width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-bottom: 50px solid rgb(255, 255, 255);
+}
