--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -204,7 +204,7 @@ img {
 h2.addbadgeh2 {
 color: white;
 padding-left: 40%;
-padding-top: 10%;
+/* padding-top: 10%; */
 padding-bottom: 5%;
 font-family: 'Montserrat', sans-serif;
 }
