--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -6,14 +6,14 @@ body {
   margin: 0;
   padding: 0;
   color: white !important;
-  background: rgb(0, 19, 19);
+  background:grey !important;
   
 }
 
 nav {
   padding: 20px 0 20px 0;
   margin-bottom: 4%;
-  background-color: rgb(0, 19, 19);
+  background-color: rgb(0, 19, 19, 0.8);
   clip-path: polygon(0 0, 100% 0%, 100% 58%, 100% 68%, 0 100%, 0 57%);
 
 }
@@ -84,11 +84,6 @@ a{
 }
 
 
-.footer {
-  padding-bottom: 50px;
-
-}
-
 /*------------------------------( Barre de progression => user_Profile.php )-------------------------*/
 
 label  {
@@ -145,7 +140,6 @@ label  {
   }
 
 }
-
 /* wassim */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap');
@@ -162,10 +156,10 @@ h1 {
     font-family: 'Montserrat', sans-serif;
 }
 
-.row{
-    background: rgba(255, 255, 255, 0.658);
+.loginSection{
+    background: rgb(0, 19, 19, 0.8);
     border-radius: 30px;
-    box-shadow: 12px 12px 22px rgba(128, 128, 128, 0.514);
+    box-shadow: 12px 12px 22px rgb(0, 19, 19, 0.8);
 }
 h4 {
     font-family: 'Montserrat', sans-serif;
