--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -1,4 +1,3 @@
-
 /* wassim */
 /*---------------------------------------( General )-------------------------------------------------*/
 
@@ -6,8 +5,8 @@ body {
   margin: 0;
   padding: 0;
   color: white !important;
-  background:grey !important;
-  
+  background: grey !important;
+
 }
 
 nav {
@@ -18,7 +17,7 @@ nav {
 
 }
 
-a{
+a {
   text-decoration: none !important;
   color: white !important;
 
@@ -31,13 +30,13 @@ a{
 
 }
 
-.btn_logout:hover{
-  background-color:rgb(165, 0, 0) !important;  
-  
+.btn_logout:hover {
+  background-color: rgb(165, 0, 0) !important;
+
 }
 
-.btn_addUsers:hover{
-  background-color:rgb(13, 160, 0) !important;  
+.btn_addUsers:hover {
+  background-color: rgb(13, 160, 0) !important;
 
 }
 
@@ -66,15 +65,15 @@ a{
   /*border multicolor*/
   border: 5px solid blue;
 
-  border-image: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(19, 6, 0, 1) 35%, rgba(222, 219, 219, 1) 100%);
+  border-image: linear-gradient(90deg, rgb(0, 19, 19) 0%, rgb(0, 19, 19, 0.6) 35%, rgba(222, 219, 219, 1) 100%);
   border-image-slice: 1;
 
 }
 
-.tableBadge::-webkit-scrollbar{
+.tableBadge::-webkit-scrollbar {
   display: none;
 
-} 
+}
 
 .barre_vertical {
   height: 55vh;
@@ -86,7 +85,7 @@ a{
 
 /*------------------------------( Barre de progression => user_Profile.php )-------------------------*/
 
-label  {
+label {
   padding-right: 10px;
   font-size: 1rem;
 }
@@ -136,10 +135,11 @@ label  {
 
 @media only screen and (max-width: 1000px) {
   .titre_h1 {
-   font-size: 30px;
+    font-size: 30px;
   }
 
 }
+
 /* wassim */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap');
@@ -147,48 +147,57 @@ label  {
 /*---------------------------------- LOGIN PAGE  ----------------------------------*/
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.loginSection{
-    background: rgb(0, 19, 19, 0.8);
-    border-radius: 30px;
-    box-shadow: 12px 12px 22px rgb(0, 19, 19, 0.8);
+.loginContainer {
+  margin-top: 2vh;
+  max-width: 75vw;
+
 }
+
+.loginSection {
+  background: rgb(0, 19, 19, 0.8);
+  border-radius: 30px;
+  box-shadow: 12px 12px 22px rgb(0, 19, 19, 0.8);
+}
+
 h4 {
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
+  font-family: 'Montserrat', sans-serif;
+  font-style: italic;
 }
+
 form {
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
+  font-family: 'Montserrat', sans-serif;
+  font-style: italic;
 }
+
 img {
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
 }
 
 .btn1 {
-    border: none;
-    outline: none;
-    height: 50px;
-    width: 100%;
-    background-color:  rgb(0, 19, 19);
-    color: white;
-    border-radius: 4px;
-    font-weight: bold;
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  background-color: rgb(0, 19, 19);
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
 }
 
-.btn1:hover{
-    background: white;
-    border: 1px solid;
-    color: rgb(0, 19, 19);
+.btn1:hover {
+  background: white;
+  border: 1px solid;
+  color: rgb(0, 19, 19);
 }
 
 
@@ -196,54 +205,53 @@ img {
 /* ----------------------- ADD A BADGE PAGE ---------------------------------*/
 
 h2.addbadgeh2 {
-color: white;
-padding-left: 40%;
-/* padding-top: 10%; */
-padding-bottom: 5%;
-font-family: 'Montserrat', sans-serif;
+  color: white;
+  padding-left: 40%;
+  /* padding-top: 10%; */
+  padding-bottom: 5%;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .addabadge {
-    width: 80%;
-    padding-left: 20%;
+  width: 80%;
+  padding-left: 20%;
 }
 
 
 h3.addbadgeh3 {
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-    padding-top: 5%;
-    padding-left: 10%;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  padding-top: 5%;
+  padding-left: 10%;
 }
 
 .Titleofthelabels {
-    color: white;
+  color: white;
 }
 
 .rectangle {
-    height: 50px;
-    width: 100px;
-    background-color: rgb(255, 255, 255);
-  }
-
-  .square {
-    height: 50px;
-    width: 50px;
-    background-color: rgb(255, 255, 255);
-  }
-
-  .circle {
-    height: 50px;
-    width: 50px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-  }
-
-  .triangle-up {
-	width: 0;
-	height: 0;
-	border-left: 25px solid transparent;
-	border-right: 25px solid transparent;
-	border-bottom: 50px solid rgb(255, 255, 255);
+  height: 50px;
+  width: 100px;
+  background-color: rgb(255, 255, 255);
 }
 
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(255, 255, 255);
+}
+
+.circle {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+}
+
+.triangle-up {
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 50px solid rgb(255, 255, 255);
+}
