--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -23,6 +23,10 @@ a {
 
 }
 
+i{
+  margin-left: 5px;
+}
+
 /*--------------------------------------( admin/user_Profile.php )----------------------------------*/
 
 .btn_logout {
