--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   color: white !important;
   background: grey !important;
-
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav {
@@ -23,7 +23,7 @@ a {
 
 }
 
-i{
+.icon{
   margin-left: 5px;
 }
 
@@ -38,6 +38,17 @@ i{
   background-color: rgb(165, 0, 0) !important;
 
 }
+
+.btn_home {
+  margin-bottom: 5vh !important;
+  margin-right: 80px;
+}
+
+.btn_allBadge {
+  margin-bottom: 5vh !important;
+  margin-right: 10px;
+}
+
 
 .btn_addUsers:hover {
   background-color: rgb(13, 160, 0) !important;
@@ -85,6 +96,19 @@ i{
   border-right: 2px solid black;
 
 }
+
+.modal-content{
+  background-color: grey;
+  filter: brightness(80%);
+  margin-top: 8vh;
+}
+
+.modal-header{
+  background-color: rgb(0, 19, 19, 0.8);
+  padding-bottom: 8%;
+  clip-path: polygon(0 0, 100% 0%, 100% 58%, 100% 68%, 0 90%, 0 57%);
+}
+
 
 
 /*------------------------------( Barre de progression => user_Profile.php )-------------------------*/
@@ -151,7 +175,7 @@ label {
 /*---------------------------------- LOGIN PAGE  ----------------------------------*/
 
 * {
-  padding: 0;
+ 
   margin: 0;
   box-sizing: border-box;
 }
