--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -23,6 +23,11 @@ a {
 
 }
 
+i{
+color: white !important ;
+
+}
+
 .icon{
   margin-left: 5px;
 }
@@ -105,7 +110,8 @@ font-size: 20px;
 
 .modal-content{
   background-color: grey;
-  filter: brightness(80%);
+  color: black !important;
+  filter: brightness(90%);
   margin-top: 8vh;
 }
 
@@ -179,9 +185,9 @@ label {
 /*---------------------------------- LOGIN PAGE  ----------------------------------*/
 
 * {
- 
   margin: 0;
   box-sizing: border-box;
+
 }
 
 h1 {
@@ -291,11 +297,8 @@ h3.addbadgeh3 {
 
 h1.mytitle {
   font-family: 'Montserrat', sans-serif !important;
-  text-align: center !important;
-  padding-left: 40%;
-  padding-bottom: 5%;
-  padding-top: 5%;
-  display: inline-flex;
+  padding-bottom: 4%;
+  
 }
 
 .tableallbadges {
